src/scss/parts/shared/header-templates/_header-style-1.scss
$mobileMenuZ: 110;
$header-transition: none;

@mixin useHeaderHeight($property) {
  #{$property}: 40px;

  @include respond-to(tablet) {
    #{$property}: 65px;
  }

  @include respond-to(desktop) {
    #{$property}: 125px;
  }
}

@mixin useHeaderPadding() {
  padding: {
    top: 5px;
    bottom: 5px;
  }
  box-sizing: border-box;

  @include respond-to(tablet) {
    padding: {
      top: 10px;
      bottom: 10px;
    }
  }

  @include respond-to(desktop) {
    padding: {
      top: 30px;
      bottom: 30px;
    }
  }
}

header#header-style-1 {
  position: absolute;
  top: 0;
  left: 0;
  z-index: 100;
  width: 100%;

  .torque-header-content-wrapper {
    @include useHeaderHeight(height);

    display: flex;
    justify-content: flex-end;
    align-items: center;

    padding: 0 $bodyPadding1;
    box-sizing: border-box;

    background-color: $header-gray;

    @include respond-to(desktop) {
      flex-direction: column;
      flex-wrap: wrap;
      align-items: flex-end;
      justify-content: center;
    }

    .torque-header-logo-wrapper {
      @include useHeaderPadding();

      flex: 1 0 50%;
      height: 100%;

      @include respond-to(desktop) {
        height: 100%;
        width: 50%;
      }

      div {
        width: auto;
        max-width: 175px;
      }
    }

    form.searchform {
      @include useHeaderPadding();

      flex: 1 1 50%;
      display: flex;
      align-items: center;
      justify-content: flex-end;

      padding-left: 8px;
      padding-right: $bodyPadding1;
      height: 100%;

      background-color: transparent;

      transition: $header-transition;

      @include respond-to(desktop) {
        padding: 10px 0;
        width: 170px;
        height: 50%;
      }

      .search-icon {
        flex: 0 0 auto;
        padding-right: 10px;
        width: 17px;
        height: 17px;

        background-image: url("../statics/images/searchicon.svg");
        background-size: contain;
        background-repeat: no-repeat;
        background-position: left;
      }

      input#search {
        flex: 1 1 100%;
        border: none;
        border-bottom: 2px solid white;
        padding: 2px 5px;

        background-color: transparent;
        color: white;
        outline: none;

        transition: $header-transition;
      }

      &:not(.closed) {
        @include respond-to-max(desktop) {
          background-color: $header-gray;
        }
      }

      &.closed {
        @include respond-to-max(desktop) {
          padding-right: 10px;

          input#search {
            flex: 0 1 0;
            padding: 0;
          }
        }
      }
    }

    .torque-header-burger-menu-wrapper {
      @include useHeaderPadding();

      flex: 0 0 25px;
      z-index: $mobileMenuZ + 1;
      overflow: hidden;

      transition: $header-transition;

      @include respond-to(desktop) {
        display: none;
      }

      .torque-burger-menu-line {
        background-color: $white;
      }
    }

    .torque-header-menu-items-inline-wrapper {
      @include useHeaderPadding();
      flex-grow: 1;

      text-align: right;

      @include respond-to-max(desktop) {
        display: none;
      }

      @include respond-to(desktop) {
        padding: 10px 0;
        width: 50%;
        height: 50%;
      }

      .torque-menu-item-wrapper {
        padding: 0 10px;

        font-size: 16px;
        font-weight: 500;
        color: $white;
        text-transform: uppercase;

        transition: all 0.3s ease;

        &:hover {
          color: $medium-green;
        }

        &:last-child {
          padding-right: 0;
        }
      
        &.parent {
          position: relative;
          padding-right: 20px;
          background-image: url('/wp-content/themes/interra-child/statics/images/dropdownarrow.png');
          background-repeat: no-repeat;
          background-position: right center;
          background-size: 15px;

          .torque-menu-item-children-wrapper {
            position: absolute;
            top: 100%;
            left: -25%;
            width: 200px !important;
            background-color: $submenu-background;
            padding: 10px;
            box-sizing: border-box;

            transition: opacity .4s ease-in-out;
            visibility: hidden;
            opacity: 0;

            z-index: 99;

            box-shadow: 0 0 1px $submenu-background;

            .torque-menu-item-wrapper {
              display: block;
              text-align: left;
            }
          }

          &:hover {
            .torque-menu-item-children-wrapper {
              top: 100%;
              visibility: visible;
              opacity: 1;

              .torque-menu-item-wrapper {
                display: block;
                text-align: left;
              }
            }
          }
        }
      }
    }

    &.searchform-open {
      @include respond-to-max(desktop) {
        padding-right: 0;

        .torque-header-burger-menu-wrapper {
          flex: 0;
        }
      }
    }
  }

  .torque-header-menu-items-mobile {
    right: 0;
    left: unset;
    z-index: $mobileMenuZ;
    @include useHeaderHeight(padding-top);
    width: auto;

    background-color: $dark-grey;

    @include respond-to(desktop) {
      display: none;
    }

    .torque-menu-items-stacked {
      padding: 10px $bodyPadding1;
      width: auto;
      min-width: 170px;
      box-sizing: border-box;

      background-color: $light-green;

      @include respond-to(tablet) {
        min-width: 250px;
      }

      .torque-menu-item-wrapper {
        padding: 5px 0px;

        text-align: right;
        text-transform: uppercase;
        color: $white;

        transition: all 0.3s ease;

        &:hover {
          color: $darkest-green;
        }

        &.parent {
          .torque-menu-item-children-wrapper {
            padding-right: 30px;
            position: relative;
  
            &:after {
              content: '';
              position: absolute;
              top: 5%;
              right: 2px;
              height: 90%;
              width: 10px;
              // border-top: 1px solid #fff;
              border-left: 1px solid #fff;
              border-bottom: 1px solid #fff;
            }
          }
        }
      }
    }
  }
}

